changed login page and pagination layout, reworked users helpers, raised character limit for some fields and fixed routing

--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -8,6 +8,16 @@
   html, body {
     font-size: 12px;
 
+    .login-panel {
+      .left-container {
+        display: none;
+      }
+
+      .right-container .logo-dcpeoti {
+        display: block;
+      }
+    }
+
     .main .menu-icon {
       display: block;
       position: absolute;
@@ -80,12 +90,6 @@
 @media only screen and (max-width: 767px){
   html, body {
     font-size: 11px;
-
-    .login-panel {
-      .left-container {
-        display: none;
-      }
-    }
 
     .order-cards {
       grid-template-columns: 1fr !important;
