--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -34,6 +34,10 @@
 
 #registrations, #sessions, #passwords {
 	&.new, &.create {
+		.box {
+			background-color: transparent;
+		}
+
 		.main {
 			height: auto;
 			min-height: 100%;
@@ -46,7 +50,7 @@
 }
 
 .login-panel {
-	max-width: 1280px;
+	max-width: 1000px;
 	height: 720px;
 	width: 100%;
 	position: relative;
@@ -58,7 +62,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		@include background("bg.jpg", cover);
+		// @include background("bg.jpg", cover);
 	}
 
 	.left-container, .right-container, .right-container .content {
@@ -73,7 +77,7 @@
 	.left-container {
 		width: 100%;
 		max-width: 480px;
-		background-color: #fff;
+		// background-color: #fff;
 
 		a {
 			display: flex;
@@ -84,6 +88,10 @@
 
 		img {
 			width: 100%;
+		}
+
+		.mockup {
+			width: 800px;
 		}
 
 		.logo-pref-taubate {
@@ -98,7 +106,11 @@
 	.right-container {
 		position: relative;
 		width: 100%;
-		background-color: rgba($dark-blue, .75);
+		// background-color: rgba($dark-blue, .75);
+
+		.logo-dcpeoti {
+			display: none;
+		}
 
 		.content {
 			width: 100%;
@@ -112,11 +124,15 @@
 
 			.input {
 				width: 100%;
+
+				input {
+					border-color: $grey;
+				}
 			}
 		}
 
 		.form .input:not(.submit):not(.boolean) label {
-			color: #ffffff;
+			// color: #ffffff;
 		}
 
 		.form-options {
@@ -161,7 +177,19 @@
 		}
 
 		.boolean label {
-			color: white;
+			color: #aaa;
+			
+			&:before {
+				border-color: #aaa;
+			}
+
+			&.checked {
+				color: $info;
+
+				&:after {
+					border-color: $info;
+				}
+			}
 		}
 	}
 }
