--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,7 +21,7 @@
       <div class="col">
         <section class="container-body">
           <%= simple_form_for @user, url: edit_user_registration_path, html: { class: "form" } do |f| %>
-            <% if is_admin? %>
+            <% if is_admin?(current_user) %>
               <div class="row">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
                   <%= f.input :name, label: "Nome completo", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: Fulaninho de Tal"} %>
@@ -37,7 +37,7 @@
 
             <div class="row">
               <div class="col-12 col-sm-8 col-md-6 col-lg-4">
-                <%= f.input :username, label: is_school? ? "Login/E-mail" : "Login/Nome de usuário", label_html: { class: "form-label" }, input_html: { placeholder: "unidade@email.com"} %>
+                <%= f.input :username, label: is_school?(current_user) ? "Login/E-mail" : "Login/Nome de usuário", label_html: { class: "form-label" }, input_html: { placeholder: "unidade@email.com"} %>
               </div>
             </div>
 
