--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -9,7 +9,7 @@
 				<header class="container-header">
 					<h1 class="header-title">Editar dados da <span>OS</span></h1>
 
-					<% if is_admin? || @order.status == "Em aberto" %>
+					<% if is_admin?(current_user) || @order.status == "Em aberto" %>
 		        <div class="actions">
 		        	<%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
 		          <%= link_to orders_path, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
@@ -27,11 +27,11 @@
 				<section class="container-body">
 					<div class="order-tabs m-b-10">
 						<div class="order-tab text-center">
-							<button class="btn-data <%= 'current' if !is_admin?%>" order-data="school-data">Informações da OS</button>
+							<button class="btn-data <%= 'current' if !is_admin?(current_user)%>" order-data="school-data">Informações da OS</button>
 						</div>
 					  
 						<div class="order-tab text-center">
-					  	<button class="btn-data <%= 'current' if is_admin?%>" order-data="admin-data">Ordem de serviço</button>
+					  	<button class="btn-data <%= 'current' if is_admin?(current_user)%>" order-data="admin-data">Ordem de serviço</button>
 						</div>
 					</div>
 
@@ -39,7 +39,7 @@
 		    		<div class="col-12 col-lg-6 order-id">
 		    			<%= content_tag :h4 do %>
 		    				<%= "OS ##{@order.id.to_s.rjust(3, '0')}" %>
-		    				<%= content_tag :span, " - #{@order.school.name}" if is_admin? %>
+		    				<%= content_tag :span, " - #{@order.school.name}" if is_admin?(current_user) %>
 		    			<% end %>
 		    		</div>
 
@@ -53,10 +53,10 @@
 					<%= simple_form_for @order, url: edit_order_path, html: { class: "form" } do |f| %>
 			      <%= f.simple_fields_for :stuff do |s| %>
 			      	<%= f.input :updated_by, as: :hidden, label: false, input_html: { value: current_user.id }, wrapper: false %>
-			      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin? %>
+			      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin?(current_user) %>
 
-			      	<fieldset <%= "disabled=disabled" if is_admin? || @order.status != "Em aberto" %>>
-								<div id="school-data" class="order-data <%= 'current' if !is_admin?%>">
+			      	<fieldset <%= "disabled=disabled" if is_admin?(current_user) || @order.status != "Em aberto" %>>
+								<div id="school-data" class="order-data <%= 'current' if !is_admin?(current_user) %>">
 				      		<%= f.input :user_id, as: :hidden, label: false, wrapper_html: { class: "m-t-0" } %>
 
 					      	<div class="row">
@@ -98,8 +98,8 @@
 			    			</div>
 			    		</fieldset>
 
-		    			<fieldset <%= "disabled=disabled" if !is_admin? %>>
-			    			<div id="admin-data" class="order-data <%= 'current' if is_admin?%>">
+		    			<fieldset <%= "disabled=disabled" if !is_admin?(current_user) %>>
+			    			<div id="admin-data" class="order-data <%= 'current' if is_admin?(current_user) %>">
 					      	<div class="row">
 					      		<div class="col-12 col-sm-4 col-lg-4">
 					      			<%= f.input :status, required: false, label: "Status", collection: list_status, include_blank: "Selecione o status...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
