--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -24,12 +24,12 @@
 			      <%= f.simple_fields_for :stuff do |s| %>
 			      	<%= f.input :user_id, as: :hidden, label: false, input_html: { value: current_user.id }, wrapper: false %>
 			      	<%= f.input :updated_by, as: :hidden, label: false, input_html: { value: current_user.id }, wrapper: false %>
-			      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin? %>
+			      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin?(current_user) %>
 
 			      	<div class="row">
 			      		<%= content_tag :div, "", class: "col-12 col-sm-6 col-md-4 col-lg-3" do %>
 		      				<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "chosen-select" } %>
-		    				<% end if is_admin? %>
+		    				<% end if is_admin?(current_user) %>
 
 			      		<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 		      				<%= f.input :requester, required: false, label: "Solicitante", label_html: { class: "form-label" } %>
