--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -10,6 +10,7 @@
           <h1 class="header-title">Editar dados da <span>unidade</span></h1>
 
           <div class="actions">
+            <%= link_to edit_user_password_path(@user), class: "btn-warning icon" do %><span class="material-icons md-16">key</span>Trocar senha<% end %>
             <%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-icons md-16 md-light">done</span>Salvar<% end %>
             <%= link_to :back, class: "btn-cancel icon" do %><span class="material-icons md-16">undo</span>Voltar<% end %>
           </div>
@@ -28,6 +29,12 @@
             </div>
 
             <%= f.simple_fields_for :school do |s| %>
+              <div class="row">
+                <div class="col-12 col-sm-8 col-md-6 col-lg-6">
+                  <%= s.input :name, label: "Nome da unidade", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: EMEI/EMEF/UEI"} %>
+                </div>
+              </div>
+
               <div class="row">
                 <div class="col">
                   <%= s.input :segment, label: "Segmento", as: :radio_buttons, collection: list_segments, label_html: { class: "form-label" } %>
