printing margin set to 0 and cross browser color adjust

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -574,10 +574,16 @@
 				width: 10em;
 				filter: none;
 			}
+			
+			* {
+				-webkit-print-color-adjust: exact;
+				color-adjust: exact;
+			}
 		}
 
 		.main {
 			background-color: white;
+			overflow: hidden;
 
 			header, footer {
 				padding: 50px 0;
