--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -22,19 +22,7 @@
       <div class="col">
         <section class="container-body">
           <%= simple_form_for @user, url: edit_school_path, html: { class: "form" } do |f| %>
-            <div class="row">
-              <div class="col-12 col-sm-8 col-md-6 col-lg-4">
-                <%= f.input :username, label: "E-mail/Nome de usuário", label_html: { class: "form-label" }, input_html: { placeholder: "unidade@email.com"} %>
-              </div>
-            </div>
-
             <%= f.simple_fields_for :school do |s| %>
-              <div class="row">
-                <div class="col-12 col-sm-8 col-md-6 col-lg-6">
-                  <%= s.input :name, label: "Nome da unidade", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: EMEI/EMEF/UEI"} %>
-                </div>
-              </div>
-
               <div class="row">
                 <div class="col">
                   <%= s.input :segment, label: "Segmento", as: :radio_buttons, collection: list_segments, label_html: { class: "form-label" } %>
@@ -43,6 +31,16 @@
 
               <div class="row">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+                  <%= f.input :username, label: "E-mail/Nome de usuário", label_html: { class: "form-label" }, input_html: { placeholder: "unidade@email.com"} %>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-12 col-lg-8 col-md-6">
+                  <%= s.input :name, label: "Nome da unidade", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: EMEI/EMEF/UEI"} %>
+                </div>
+
+                <div class="col-12 col-lg-4 col-md-6">
                   <%= s.input :zip_code, label: "CEP", label_html: { class: "form-label" }, wrapper_html: { class: "zip-code" }, input_html: { placeholder: "Ex.: 12345-678", maxlength: 8 } %>
                 </div>
               </div>
