--- a/app/assets/stylesheets/modules/_home.scss
+++ b/app/assets/stylesheets/modules/_home.scss
@@ -49,7 +49,7 @@
 				display: inline-block;
 				background-color: $green;
 				padding: 10px 20px;
-				max-width: 25em;
+				max-width: calc(100% - 50px);
 				border-radius: 5px;
 
 				.card-title {
