--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -153,8 +153,8 @@
 		          			<h3 class="uppercase highlight">Data</h3>
 		          			
 				          	<div class="col content-inline">
-											<%= f.input :start_date, required: false, html5: true, label: "Retirada", label_html: { class: "form-label" } %>
-											<%= f.input :end_date, required: false, html5: true, label: "Entrega", label_html: { class: "form-label" }, wrapper_html: { class: "m-t-0" } %>
+											<%= f.input :start_date, required: false, html5: true, label: "Inicial", label_html: { class: "form-label" } %>
+											<%= f.input :end_date, required: false, html5: true, label: "Final", label_html: { class: "form-label" }, wrapper_html: { class: "m-t-0" } %>
 						      	</div>
 		          		</div>
 						    </div>
