--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -574,6 +574,10 @@
 			height: 100%;
 			margin: 0 auto;
 
+			.main-title {
+				text-align: left !important;
+			}
+
 			.logo-dcpeoti {
 				width: 10em;
 				filter: none;
@@ -591,7 +595,7 @@
 			page-break-after: auto;
 
 			header, footer {
-				padding: 50px 0;
+				padding: 25px 0;
 			}
 
 			header {
