--- a/app/assets/stylesheets/base/_media.scss
+++ b/app/assets/stylesheets/base/_media.scss
@@ -25,12 +25,14 @@
     .main .menu-icon {
       display: block;
       position: absolute;
+      z-index: 999;
       left: 15px;
       top: 15px;
       cursor: pointer;
       background-color: $alt-color;
       padding: 10px;
       border-radius: 50%;
+      @include prefix(box-shadow, (rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px));
     }
 
     .main-sidebar {
