added option for orders status

--- a/app/assets/stylesheets/core/_table.scss
+++ b/app/assets/stylesheets/core/_table.scss
@@ -55,6 +55,10 @@
       color: $alert;
     }
 
+    div[data-status="garantia"] {
+      color: $orange;
+    }
+
     div[data-status="aguardando-doacao"] {
       color: $crimson;
     }
