improved some functions and added orders attended by title

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -344,6 +344,10 @@
 							position: static;
 							bottom: -5px;
 
+							.order-card-users {
+					    	color: #333;
+					    }
+
 							.options-btn {
 						    display: inline-block;
 
