--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -306,3 +306,53 @@ dl {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+.tooltip-toggle {
+	position: relative;
+	white-space: normal !important;
+	line-height: 14px !important;
+}
+
+.tooltip-toggle::before {
+  content: attr(data-tooltip);
+	position: absolute;
+  bottom: calc(100% + 5px);
+  background-color: $dark-blue;
+  border-radius: 5px;
+  color: $primary-color;
+  padding: 7px 14px;
+  text-transform: none;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  width: 100px;
+}
+
+.tooltip-toggle::after {
+  content: " ";
+  position: absolute;
+  bottom: 100%;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid $dark-blue;
+  font-size: 0;
+  line-height: 0;
+  width: 0;
+}
+
+.tooltip-toggle:hover::before,
+.tooltip-toggle:hover::after {
+  opacity: 1;
+}
+ 
+.tooltip-toggle::before,
+.tooltip-toggle::after {
+  @include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
+	font-family: $font;
+  color: $primary-color;
+  left: 50%;
+  @include prefix(transform, translateX(-50%));
+  font-size: 10px;
+  opacity: 0;
+  pointer-events: none;
+  text-align: center;
+}
