--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -338,15 +338,20 @@
 				    h3 {
 				    	font-size: 1em;
 				    	font-weight: 400;
-				    	margin-bottom: 15px;
+				    	margin-bottom: 10px;
 				    }
 
 				    span {
 				    	font-size: 1.25em;
 							font-weight: 600;
 							color: rgba(0, 0, 0, 0.5);
-							margin-bottom: 5px;
 							display: block;
+				    }
+
+				    .order-defect {
+				    	background-color: #eee;
+					    border-radius: 5px;
+					    padding: 7px 14px;
 				    }
 					}
 
