changed orders container size and order form tab title

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -31,7 +31,7 @@
 						</div>
 					  
 						<div class="order-tab text-center">
-					  	<button class="btn-data <%= 'current' if is_admin?(current_user)%>" order-data="admin-data">Ordem de serviço</button>
+					  	<button class="btn-data <%= 'current' if is_admin?(current_user)%>" order-data="admin-data">Relatório técnico</button>
 						</div>
 					</div>
 
