--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -27,7 +27,7 @@
 							</div>
 						  
 							<div class="order-tab text-center">
-						  	<button class="btn-data" order-data="admin-data">Ordem de serviço</button>
+						  	<button class="btn-data" order-data="admin-data">Relatório técnico</button>
 							</div>
 						</div>
 					<% end %>
