added phone to orders card and show view

--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -372,8 +372,16 @@
 							position: static;
 							bottom: -5px;
 
-							.order-card-users {
-					    	color: #333;
+							.order-card-users, .order-card-phone {
+					    	color: rgba(0, 0, 0, 0.5);
+
+					    	&:nth-child(n+2) {
+					    		margin-left: 5px;
+					    	}
+
+					    	&:hover {
+					    		color: #333;
+					    	}
 					    }
 
 							.options-btn {
