--- a/app/views/orders/_order_card.html.erb
+++ b/app/views/orders/_order_card.html.erb
@@ -25,7 +25,11 @@
 
 						<%= content_tag :footer, class: "order-card-footer" do %>
 							<%= content_tag :span, is_admin?(current_user) ? order.school.usual_name : "" %>
+							
 							<div class="options">
+								<% if is_admin?(current_user) %>
+									<span class="material-icons md-20 order-card-phone tooltip-toggle" data-tooltip="<%= order.school.phone %>" title="<%= order.school.phone %>">call</span>
+								<% end %>
 
 								<% if order.maintenance_technicians != [""] %>
 									<span class="material-icons md-20 order-card-users tooltip-toggle" data-tooltip="<%= get_user(order.maintenance_technicians) %>" title="<%= get_user(order.maintenance_technicians) %>">
