--- a/app/views/stuffs/new.html.erb
+++ b/app/views/stuffs/new.html.erb
@@ -24,21 +24,25 @@
 		      	<%= f.input :school_id, as: :hidden, label: false, input_html: { value: current_user.school.id }, wrapper: false if !is_admin?(current_user) %>
 
 		    		<%= content_tag :div, "", class: "row" do %>
-		    			<div class="col-12 col-sm-4">
+		    			<div class="col-12 col-lg-4 col-md-5 col-sm-6">
 		  					<%= f.input :school_id, label: "Unidade", collection: @schools, include_blank: "Selecione a sua unidade...", label_html: { class: "form-label" }, input_html: { class: "chosen-select" } %>
 		    			</div>
 						<% end if is_admin?(current_user) %>
 
 		      	<div class="row">
-							<div class="col-12 col-sm-4">
-		        		<%= f.input :patrimony, label: "Patrimônio", label_html: { class: "form-label" } %>
+							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
+		        		<%= f.input :patrimony, label: "Patrimônio", label_html: { class: "form-label" }, placeholder: "Deixe em branco caso não tenha" %>
 		        	</div>      		
+	        	</div>      		
 
-							<div class="col-12 col-sm-4">
+		      	<div class="row">
+							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
 				      	<%= f.input :category, required: false, label: "Categoria", collection: list_categories, include_blank: "Selecione a categoria...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
 							</div>	 
+						</div>	 
 
-							<div class="col-12 col-sm-4">
+		      	<div class="row">
+							<div class="col-12 col-lg-4 col-md-5 col-sm-6">
 				      	<%= f.input :brand, required: false, label: "Marca/modelo", collection: list_brands, include_blank: "Selecione o modelo...", label_html: { class: "form-label" }, wrapper_html: { class: "custom-select" } %>
 							</div>	      		
 		      	</div>
